Tweak user guide to correct mistakes and improve readability

--- a/docs/stylesheets/custom.css
+++ b/docs/stylesheets/custom.css
@@ -22,7 +22,8 @@ blockquote {
     overflow: auto;
     text-shadow: none;
     border-radius: 0 6px 6px 0;
-    margin-left: 10px;
+    margin-left: 20px;
+    padding-left: 20px;
 }
 
 blockquote>b {
@@ -156,13 +157,15 @@ figure img {
 
 kbd.light {
     display: inline-block;
-    padding: 0 5px;
-    font-size: 14px;
-    color: #555;
     vertical-align: middle;
     background-color: #fcfcfc;
     border: solid 1px #ccc;
     border-bottom-color: #bbb;
     border-radius: 3px;
     box-shadow: inset 0 -1px 0 #bbb;
+}
+
+.command-format {
+    background: #440000;
+    position: relative;
 }
